proto_library(
    name = "example_proto",
    srcs = ["example.proto"],
)

java_proto_library(
    name = "example_java_proto",
    deps = [":example_proto"],
)

java_library(
    name = "example_java",
    srcs = ["C.java"],
    # Uncomment this line to include the proto as a dependency
    # deps = [":example_java_proto"],
)
